test/TestSuite/Scheduler/Errors/loop_detected_6.tjp
project test "Test" "1.0" 2000-01-01 - 2000-01-04

task t1 "Task1" {
	end 2000-01-04
	
	task s1 "Sub1" {
		length 1d
		precedes !!t3.s1
	}
}

task t2 "Task2" {
	precedes !t1
	task s1 "Sub1" {
		length 1d
	}
}

task t3 "Task3" {
	task s1 "Sub1" {
		length 1d
		precedes !!t2
	}
}

# MARK: warning 3 loop_detected
# MARK: info 6 loop_at_start
# MARK: info 6 loop_at_end
# MARK: info 20 loop_at_start
# MARK: info 20 loop_at_end
# MARK: info 12 loop_at_start
# MARK: info 14 loop_at_start
# MARK: info 14 loop_at_end
# MARK: error 3 loop_end

